--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-redux": "^5.0.14",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts-ts": "2.13.0"
+    "react-redux": "^5.0.6",
+    "react-scripts-ts": "2.13.0",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -14,10 +17,13 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.1.8",
     "@types/jest": "^22.1.2",
     "@types/node": "^9.4.5",
     "@types/react": "^16.0.36",
     "@types/react-dom": "^16.0.3",
+    "enzyme": "^3.3.0",
+    "react-addons-test-utils": "^15.6.2",
     "typescript": "^2.7.1"
   }
 }
