--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "redux": "^3.7.2"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
+    "start": "sass --watch src/styles | react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject"
@@ -23,7 +23,9 @@
     "@types/react": "^16.0.36",
     "@types/react-dom": "^16.0.3",
     "enzyme": "^3.3.0",
+    "node-sass": "^4.7.2",
     "react-addons-test-utils": "^15.6.2",
+    "sass-loader": "^6.0.6",
     "typescript": "^2.7.1"
   }
 }
