--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "redux": "^3.7.2"
   },
   "scripts": {
-    "start": "sass --watch src/styles | react-scripts-ts start",
+    "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject"
