--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "redux": "^3.7.2"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts-ts start",
+    "build-js": "react-scripts-ts build",
+    "start": "npm-run-all -p watch-css start-js",
+    "build": "npm-run-all build-css build-js",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject"
   },
@@ -24,6 +28,8 @@
     "@types/react-dom": "^16.0.3",
     "enzyme": "^3.3.0",
     "node-sass": "^4.7.2",
+    "node-sass-chokidar": "0.0.3",
+    "npm-run-all": "^4.1.2",
     "react-addons-test-utils": "^15.6.2",
     "sass-loader": "^6.0.6",
     "typescript": "^2.7.1"
