--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.2",
     "react-addons-test-utils": "^15.6.2",
+    "redux-devtools-extension": "^2.13.2",
     "sass-loader": "^6.0.6",
     "typescript": "^2.7.1"
   }
