--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-addons-css-transition-group": "^15.0.4",
     "@types/react-redux": "^5.0.14",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
