--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/react-addons-css-transition-group": "^15.0.4",
     "@types/react-redux": "^5.0.14",
     "react": "^16.2.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-scripts-ts": "2.13.0",
