--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # idea
 /.idea
 
+# vscode
+/.vscode
+
 # dependencies
 /node_modules
 
@@ -22,4 +25,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-/src/styles/scss/*.css
+/src/styles/css/*.css
