--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "redux": "^3.7.2"
   },
   "scripts": {
-    "build-css": "node-sass-chokidar src/ -o src/",
+    "build-css": "node-sass-chokidar src/styles/scss -o src/styles/css",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start-js": "react-scripts-ts start",
     "build-js": "react-scripts-ts build",
