--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-scripts-ts": "2.13.0",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/styles/scss -o src/styles/css",
@@ -28,6 +29,7 @@
     "@types/node": "^9.4.5",
     "@types/react": "^16.0.36",
     "@types/react-dom": "^16.0.3",
+    "@types/uuid": "^3.4.3",
     "enzyme": "^3.3.0",
     "node-sass": "^4.7.2",
     "node-sass-chokidar": "0.0.3",
