--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^5.0.6",
     "react-scripts-ts": "2.13.0",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "uuid": "^3.2.1"
   },
   "scripts": {
@@ -29,6 +30,7 @@
     "@types/node": "^9.4.5",
     "@types/react": "^16.0.36",
     "@types/react-dom": "^16.0.3",
+    "@types/redux-thunk": "^2.1.0",
     "@types/uuid": "^3.4.3",
     "enzyme": "^3.3.0",
     "node-sass": "^4.7.2",
